# Anti-phishing-extension

./: .gitignore  CNAME  Cargo.toml  LICENSE  README.md  all-links.json  asset-manifest.json  index.html  json_formatter.py  main.py  package-lock.json  package.json  phishing-sites-list.json
.github/workflows/: rust.yml
extension/: manifest.json  popup.html
extension/js/: background.js  content.js  popup.js
filter/107/10/: 15.json
filter/191/62/: 14.json
filter/37/16/: 14.json
filter/67/23/: 13.json
filter/ac/da/: 13.json
filter/ac/fi/: 13.json
filter/ac/la/: 12.json
filter/ac/ss/: 19.json
filter/academy/cr/: 17.json
filter/academy/li/: 12.json
filter/ae/de/: 19.json
filter/ae/is/: 9.json
filter/ae/ka/: 14.json
filter/ae/to/: 14.json
filter/africa/ai/: 14.json
filter/africa/ti/: 15.json
filter/ag/we/: 16.json
filter/agency/ap/: 14.json
filter/agency/co/: 16.json
filter/agency/pe/: 15.json
filter/agency/sw/: 17.json
filter/agency/ti/: 14.json
filter/agency/un/: 13.json
filter/agency/wa/: 30.json
filter/ai/ap/: 19.json
filter/ai/co/: 9.json
filter/ai/de/: 16.json
filter/ai/e-/: 18.json
filter/ai/en/: 25.json
filter/ai/er/: 10.json
filter/ai/ev/: 11.json
filter/ai/ge/: 22.json
filter/ai/ho/: 24.json  28.json
filter/ai/hu/: 27.json
filter/top/: 4.json
src/: main.rs
src/components/: StyledComponenys.js
static/js/: 787.bc341fde.chunk.js  787.bc341fde.chunk.js.map  main.723edb01.js  main.723edb01.js.map
website/: package.json
website/public/: index.html
website/src/: App.js
(+24463 files in other folders)
